--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <script defer src="dist/main.js"></script>
 </head>
 <body>
+  <iframe src="https://suzukidaishi.github.io/vrm-walk-demo/index.html?messaging=true" style="position: absolute; left: 0px; top: 0px; width: 100vw; height: 100vh;"></iframe>
 </body>
 </html>
